unpackaged/main/default/objects/Opportunity/fields/Access_to_Venue_Start_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Venue_Start_Date_and_Time__c</fullName>
    <inlineHelpText>Access to Venue Start Date.</inlineHelpText>
    <label>Access to Venue Start Date and Time</label>
    <type>DateTime</type>
</CustomField>