unpackaged/main/default/objects/Opportunity/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <inlineHelpText>Account Manager assigned to exhibition</inlineHelpText>
    <label>Account Manager</label>
    <length>30</length>
    <type>Text</type>
</CustomField>