unpackaged/main/default/objects/Opportunity/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Plan</label>
    <referenceTo>Show_Plan__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Show_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>