unpackaged/main/default/objects/Opportunity/fields/Actual_Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Closed_Won_Date__c</fullName>
    <label>Actual Closed Won Date</label>
    <type>Date</type>
</CustomField>