unpackaged/main/default/objects/Opportunity/fields/Actual_Freight_Weight_CWT__c.field-meta.xml
<CustomField>
    <fullName>Actual_Freight_Weight_CWT__c</fullName>
    <inlineHelpText>Data feed from CORE after show close month</inlineHelpText>
    <label>Actual Freight Weight (CWT)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>