unpackaged/main/default/objects/Opportunity/fields/Actual_Net_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Actual_Net_Square_Feet__c</fullName>
    <inlineHelpText>Data feed from CORE after show close month</inlineHelpText>
    <label>Actual Net Square Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>