unpackaged/main/default/objects/Opportunity/fields/Actual_Number_of_Exhibitors__c.field-meta.xml
<CustomField>
    <fullName>Actual_Number_of_Exhibitors__c</fullName>
    <inlineHelpText>Data feed from CORE after show close month</inlineHelpText>
    <label>Floorplan Actual Number of Exhibitors</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>