unpackaged/main/default/objects/Opportunity/fields/ADP_Amount__c.field-meta.xml
<CustomField>
    <fullName>ADP_Amount__c</fullName>
    <inlineHelpText>For EMEA: Total amount of products where ADP = Yes</inlineHelpText>
    <label>ADP Amount</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ADP_Target__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>