unpackaged/main/default/objects/Opportunity/fields/Advance_Shipping_Site__c.field-meta.xml
<CustomField>
    <fullName>Advance_Shipping_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance Shipping Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Advance Shipping Site)</relationshipLabel>
    <relationshipName>Show_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>