unpackaged/main/default/objects/Opportunity/fields/AdvanceShippingBillingCity__c.field-meta.xml
<CustomField>
    <fullName>AdvanceShippingBillingCity__c</fullName>
    <inlineHelpText>City to Ship Advance Freight.</inlineHelpText>
    <label>Adv. Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>