unpackaged/main/default/objects/Opportunity/fields/AdvanceShippingBillingCountry__c.field-meta.xml
<CustomField>
    <fullName>AdvanceShippingBillingCountry__c</fullName>
    <inlineHelpText>Country to Ship Advance Freight.</inlineHelpText>
    <label>Adv. Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>