unpackaged/main/default/objects/Opportunity/fields/AdvanceShippingBillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>AdvanceShippingBillingPostalCode__c</fullName>
    <inlineHelpText>Postal Code to Ship Advance Freight.</inlineHelpText>
    <label>Adv. Shipping Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>