unpackaged/main/default/objects/Opportunity/fields/AdvanceShippingBillingState__c.field-meta.xml
<CustomField>
    <fullName>AdvanceShippingBillingState__c</fullName>
    <inlineHelpText>State to ship Advance Freight.</inlineHelpText>
    <label>Adv. Shipping State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>