unpackaged/main/default/objects/Opportunity/fields/AdvanceShippingBillingStreet__c.field-meta.xml
<CustomField>
    <fullName>AdvanceShippingBillingStreet__c</fullName>
    <inlineHelpText>Street Address to Ship Advance Freight.</inlineHelpText>
    <label>Adv. Shipping Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>