unpackaged/main/default/objects/Opportunity/fields/AdvanceShippingFax__c.field-meta.xml
<CustomField>
    <fullName>AdvanceShippingFax__c</fullName>
    <inlineHelpText>Fax # of Advance Shipping Facility.</inlineHelpText>
    <label>AdvanceShippingFax</label>
    <type>Phone</type>
</CustomField>