unpackaged/main/default/objects/Opportunity/fields/AdvanceShippingName__c.field-meta.xml
<CustomField>
    <fullName>AdvanceShippingName__c</fullName>
    <inlineHelpText>Consignee of Advance Shipping Freight.</inlineHelpText>
    <label>Adv. Shipping Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>