unpackaged/main/default/objects/Opportunity/fields/Agency_Work__c.field-meta.xml
<CustomField>
    <fullName>Agency_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agency Work</label>
    <type>Checkbox</type>
</CustomField>