unpackaged/main/default/objects/Opportunity/fields/Alt_Accommodation_Total__c.field-meta.xml
<CustomField>
    <fullName>Alt_Accommodation_Total__c</fullName>
    <formula>Hotel_Map_Amount__c + Oasis_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alt Accommodation Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>