unpackaged/main/default/objects/Opportunity/fields/Altify_Completed_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Altify_Completed_Reviews__c</fullName>
    <formula>DMAPP__Dealmaker_Opportunity__r.DMAPP__Completed_Review_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Reviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>