unpackaged/main/default/objects/Opportunity/fields/Altify_Insight_Map_Status__c.field-meta.xml
<CustomField>
    <fullName>Altify_Insight_Map_Status__c</fullName>
    <formula>IF (OR(DMAPP__Dealmaker_Opportunity__c == null, DMAPP__Dealmaker_Opportunity__r.DMAPP__Collaboration_Map_Count__c &lt;= 0),
&#39;No Insight Map Nodes&#39;,
IF (DMAPP__Dealmaker_Opportunity__r.Altify_Insight_Maps_Updated_Last_90_Days__c, 
      &#39;Maps Updated In Last 90 Days&#39;, &#39;Maps Not Updated In Last 90 Days&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insight Map Status</label>
    <type>Text</type>
</CustomField>