unpackaged/main/default/objects/Opportunity/fields/Altify_Sales_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Altify_Sales_Process_Type__c</fullName>
    <formula>if
(CONTAINS($UserRole.Name,&quot;US Events&quot;), &quot;Corporate Complex&quot;, &quot;Exhibition&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Altify Sales Process Type</label>
    <type>Text</type>
</CustomField>