unpackaged/main/default/objects/Opportunity/fields/AM_Forecast_Margin_per__c.field-meta.xml
<CustomField>
    <fullName>AM_Forecast_Margin_per__c</fullName>
    <description>AM_Forecast_Margin__c  /  AM_Forecast_Price__c</description>
    <formula>AM_Forecast_Margin__c  /  AM_Forecast_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>AM_Forecast_Margin__c  /  AM_Forecast_Price__c</inlineHelpText>
    <label>AM Forecast Margin%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>