unpackaged/main/default/objects/Opportunity/fields/Assigned_to_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Production_Date__c</fullName>
    <label>Assigned to Production Date</label>
    <type>Date</type>
</CustomField>