unpackaged/main/default/objects/Opportunity/fields/Audio_Visual_Provider__c.field-meta.xml
<CustomField>
    <fullName>Audio_Visual_Provider__c</fullName>
    <inlineHelpText>Company providing AV services for this exhibition opportunity</inlineHelpText>
    <label>Audio Visual Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Absolute Productions</fullName>
            </value>
            <value>
                <fullName>Access Audio Visual</fullName>
            </value>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>AEE Productions</fullName>
            </value>
            <value>
                <fullName>Aesthetic Visual Solutions</fullName>
            </value>
            <value>
                <fullName>AG Light and Sound</fullName>
            </value>
            <value>
                <fullName>Alford Media</fullName>
            </value>
            <value>
                <fullName>Alliance AV</fullName>
            </value>
            <value>
                <fullName>Alliant</fullName>
            </value>
            <value>
                <fullName>American AV</fullName>
            </value>
            <value>
                <fullName>ASP Group</fullName>
            </value>
            <value>
                <fullName>Atlanta AV</fullName>
            </value>
            <value>
                <fullName>Audio Visual One</fullName>
            </value>
            <value>
                <fullName>Audio Visual One, Ltd.</fullName>
            </value>
            <value>
                <fullName>Audio Visual Technology Services (AVTS)</fullName>
            </value>
            <value>
                <fullName>AV-Canada</fullName>
            </value>
            <value>
                <fullName>AV Concepts</fullName>
            </value>
            <value>
                <fullName>AV Connections</fullName>
            </value>
            <value>
                <fullName>AV Experience</fullName>
            </value>
            <value>
                <fullName>AVI SPL</fullName>
            </value>
            <value>
                <fullName>AV Matters</fullName>
            </value>
            <value>
                <fullName>AVmedia</fullName>
            </value>
            <value>
                <fullName>AV Network</fullName>
            </value>
            <value>
                <fullName>AV Outsource</fullName>
            </value>
            <value>
                <fullName>AV Partners</fullName>
            </value>
            <value>
                <fullName>AVPG</fullName>
            </value>
            <value>
                <fullName>AV PRO</fullName>
            </value>
            <value>
                <fullName>AVPS - Audio Visual Production Services</fullName>
            </value>
            <value>
                <fullName>avts group</fullName>
            </value>
            <value>
                <fullName>Backstage Logic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>