unpackaged/main/default/objects/Opportunity/fields/AV_Firm_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AV_Firm_Opportunity__c</fullName>
    <label>AV Firm Opportunity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>