unpackaged/main/default/objects/Opportunity/fields/AV_Provider__c.field-meta.xml
<CustomField>
    <fullName>AV_Provider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AV Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (AV Provider)</relationshipLabel>
    <relationshipName>AV_Provider</relationshipName>
    <type>Lookup</type>
</CustomField>