unpackaged/main/default/objects/Opportunity/fields/AV_Stage_Conversion__c.field-meta.xml
<CustomField>
    <fullName>AV_Stage_Conversion__c</fullName>
    <formula>IF(TEXT(StageName)=&#39;Proposal Opportunity&#39;, &#39;PO&#39;, 
IF(TEXT(StageName)=&#39;Proposal Submitted&#39;, &#39;PS&#39;, 
IF(TEXT(StageName)=&#39;Contract Win&#39;, &#39;CR&#39;, 
IF(TEXT(StageName)=&#39;Verbal Win&#39;, &#39;CV&#39;, 
IF(TEXT(StageName)=&#39;Decline to Bid&#39;, &#39;DB&#39;, 
IF(TEXT(StageName)=&#39;Lost&#39;, &#39;LO&#39;, NULL))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AV Stage Conversion</label>
    <type>Text</type>
</CustomField>