unpackaged/main/default/objects/Opportunity/fields/BDA_Generated_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>BDA_Generated_Pipeline__c</fullName>
    <description>Field used to calculate Program Value and Revenue for BDA Generated Pipeline Calculation</description>
    <formula>IF ( Amount &lt;= 1,  BDA_Program_Value__c , Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generated Pipeline combines Program Value and Amount set to $1</inlineHelpText>
    <label>BDA Generated Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>