unpackaged/main/default/objects/Opportunity/fields/BDA_Program_Value__c.field-meta.xml
<CustomField>
    <fullName>BDA_Program_Value__c</fullName>
    <description>BDA full BANT value of Program Opportunities</description>
    <label>BDA Program Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>