unpackaged/main/default/objects/Opportunity/fields/Billing_Company__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company__c</fullName>
    <description>Blitz field for Opportunity Integration</description>
    <label>Billing Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>