unpackaged/main/default/objects/Opportunity/fields/Billing_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contacts__c</fullName>
    <description>Blitz field for Opportunity Integration</description>
    <label>Blitz Billing Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>