unpackaged/main/default/objects/Opportunity/fields/Blitz_Won_Amount__c.field-meta.xml
<CustomField>
    <fullName>Blitz_Won_Amount__c</fullName>
    <formula>IF(  EMEA_Won__c  = 1, Amount,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blitz Won Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>