unpackaged/main/default/objects/Opportunity/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <inlineHelpText>Select All That Apply</inlineHelpText>
    <label>Booking Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airfreight</fullName>
            </value>
            <value>
                <fullName>Lifting</fullName>
            </value>
            <value>
                <fullName>Sea freight</fullName>
            </value>
            <value>
                <fullName>Storage Only</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Via Advanced Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>