unpackaged/main/default/objects/Opportunity/fields/Booth_Config__c.field-meta.xml
<CustomField>
    <fullName>Booth_Config__c</fullName>
    <label>Booth Config</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GEM</fullName>
            </value>
            <value>
                <fullName>Hardwall</fullName>
            </value>
            <value>
                <fullName>iCE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>