unpackaged/main/default/objects/Opportunity/fields/Booth_Length__c.field-meta.xml
<CustomField>
    <fullName>Booth_Length__c</fullName>
    <label>Booth Length</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>