unpackaged/main/default/objects/Opportunity/fields/Booth_Package__c.field-meta.xml
<CustomField>
    <fullName>Booth_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox indicates whether the opportunity has a Booth Package.</inlineHelpText>
    <label>Booth Package</label>
    <type>Checkbox</type>
</CustomField>