unpackaged/main/default/objects/Opportunity/fields/Booth_Package_Price__c.field-meta.xml
<CustomField>
    <fullName>Booth_Package_Price__c</fullName>
    <inlineHelpText>If exhibition contract includes booth package, list price here</inlineHelpText>
    <label>Booth Package Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>