unpackaged/main/default/objects/Opportunity/fields/Booth_Size__c.field-meta.xml
<CustomField>
    <fullName>Booth_Size__c</fullName>
    <formula>Booth_Width__c * Booth_Length__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Booth Size; Booth Length X Booth Width</inlineHelpText>
    <label>Booth Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>