unpackaged/main/default/objects/Opportunity/fields/Booth_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Booth_Square_Feet__c</fullName>
    <formula>Booth_Length__c * Booth_Width__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booth Square Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>