unpackaged/main/default/objects/Opportunity/fields/Booth_Type__c.field-meta.xml
<CustomField>
    <fullName>Booth_Type__c</fullName>
    <label>Booth Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corner</fullName>
            </value>
            <value>
                <fullName>Inline</fullName>
            </value>
            <value>
                <fullName>Island</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Pavilion</fullName>
            </value>
            <value>
                <fullName>Peninsula</fullName>
            </value>
            <value>
                <fullName>Perimeter</fullName>
            </value>
            <value>
                <fullName>Permanent Install</fullName>
            </value>
            <value>
                <fullName>AV / Interactives</fullName>
            </value>
            <value>
                <fullName>Chalet</fullName>
            </value>
            <value>
                <fullName>Outdoor exhibit/stand</fullName>
            </value>
            <value>
                <fullName>Pop-Up</fullName>
            </value>
            <value>
                <fullName>Stand</fullName>
            </value>
            <value>
                <fullName>Stand by</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Hospitality Suite</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Congress Management</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Design Only</fullName>
            </value>
            <value>
                <fullName>Microsite</fullName>
            </value>
            <value>
                <fullName>Overhead</fullName>
            </value>
            <value>
                <fullName>Promotional Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>