unpackaged/main/default/objects/Opportunity/fields/Booth_Width__c.field-meta.xml
<CustomField>
    <fullName>Booth_Width__c</fullName>
    <label>Booth Width</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>