unpackaged/main/default/objects/Opportunity/fields/BoothNum__c.field-meta.xml
<CustomField>
    <fullName>BoothNum__c</fullName>
    <defaultValue>&quot;NO-BOOTH#&quot;</defaultValue>
    <label>Booth #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>