unpackaged/main/default/objects/Opportunity/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Novartis - Alcon</fullName>
            </value>
            <value>
                <fullName>Novartis - Genoptix</fullName>
            </value>
            <value>
                <fullName>Novartis - Innovative Medicines</fullName>
            </value>
            <value>
                <fullName>Novartis - Oncology</fullName>
            </value>
            <value>
                <fullName>Novartis - Sandoz</fullName>
            </value>
            <value>
                <fullName>Novartis - Spark Therapeutics</fullName>
            </value>
            <value>
                <fullName>Pfizer - CH</fullName>
            </value>
            <value>
                <fullName>Pfizer - EM</fullName>
            </value>
            <value>
                <fullName>Pfizer - EMX</fullName>
            </value>
            <value>
                <fullName>Pfizer - IM</fullName>
            </value>
            <value>
                <fullName>Pfizer - IMX</fullName>
            </value>
            <value>
                <fullName>Pfizer - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>