unpackaged/main/default/objects/Opportunity/fields/BypassValidation__c.field-meta.xml
<CustomField>
    <fullName>BypassValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is used to bypass opp from validation rules  when a non AV opp is updated where it updates  Opp record types with following opp record types:
1)AV record type(record type name contains &quot;Field&quot;)
2)Master Show Occurrence
3)Sales Rep Show Occurrence</description>
    <label>BypassValidation</label>
    <type>Checkbox</type>
</CustomField>