unpackaged/main/default/objects/Opportunity/fields/CA_Won_Amount__c.field-meta.xml
<CustomField>
    <fullName>CA_Won_Amount__c</fullName>
    <description>Corporate Accounts Won Amount</description>
    <label>CA Won Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>