unpackaged/main/default/objects/Opportunity/fields/Calculated_Margin__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Margin__c</fullName>
    <description>The calculated margin (the total amount multiplied by the margin). Mutliplied as margin is stored as decimal value</description>
    <formula>IF(OR( Amount = 0, Margin__c =0),0, Amount * Margin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Amount divided by the % margin</inlineHelpText>
    <label>Calculated Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>