unpackaged/main/default/objects/Opportunity/fields/Choice_of_Law__c.field-meta.xml
<CustomField>
    <fullName>Choice_of_Law__c</fullName>
    <label>Choice of Law</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>