unpackaged/main/default/objects/Opportunity/fields/Client_Rebate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Client_Rebate_Amount__c</fullName>
    <inlineHelpText>Client Rebate Amount based on Fee Per Reservation Fee or Per Room Night</inlineHelpText>
    <label>Client Rebate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>