unpackaged/main/default/objects/Opportunity/fields/Client_Revenue_ShareRebate__c.field-meta.xml
<CustomField>
    <fullName>Client_Revenue_ShareRebate__c</fullName>
    <inlineHelpText>Type of revenue for housing (ie. Per Reservation Fee, Per Room Night Fee, Commission %)</inlineHelpText>
    <label>Client Revenue Share/Rebate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rebate Per Reservation</fullName>
            </value>
            <value>
                <fullName>Rebate Per Room Night</fullName>
            </value>
            <value>
                <fullName>Revenue Share Percentage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>