unpackaged/main/default/objects/Opportunity/fields/Client_VP__c.field-meta.xml
<CustomField>
    <fullName>Client_VP__c</fullName>
    <defaultValue>$User.Client_VP__c</defaultValue>
    <label>Client VP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>