unpackaged/main/default/objects/Opportunity/fields/Collection_Details__c.field-meta.xml
<CustomField>
    <fullName>Collection_Details__c</fullName>
    <description>To be used for Adfield to have visibility of the Account Name</description>
    <inlineHelpText>To be used for Adfield to have visibility of the Account Name</inlineHelpText>
    <label>Account Name</label>
    <type>TextArea</type>
</CustomField>