unpackaged/main/default/objects/Opportunity/fields/Collection_Haulier__c.field-meta.xml
<CustomField>
    <fullName>Collection_Haulier__c</fullName>
    <label>Collection Haulier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>