unpackaged/main/default/objects/Opportunity/fields/Collection_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Collection_Reference_Number__c</fullName>
    <description>Used By EMEA Logistics</description>
    <inlineHelpText>Collection reference number for items</inlineHelpText>
    <label>Collection Reference Number</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>