unpackaged/main/default/objects/Opportunity/fields/Competition_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Competition_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Audited - KEEP per SR 9/24/2019 Need for Legal</description>
    <label>Competition Restrictions</label>
    <type>Checkbox</type>
</CustomField>