unpackaged/main/default/objects/Opportunity/fields/Conference_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Conference_Start_Date__c</fullName>
    <label>Conference Start Date</label>
    <type>Date</type>
</CustomField>