unpackaged/main/default/objects/Opportunity/fields/Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details__c</fullName>
    <description>Used by 3rd Party lead Gen ( Adfeild) only - EMEA</description>
    <inlineHelpText>To be used to detail Contact full name, Email Address and Telephone Number</inlineHelpText>
    <label>Contact Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>