unpackaged/main/default/objects/Opportunity/fields/Container_Number__c.field-meta.xml
<CustomField>
    <fullName>Container_Number__c</fullName>
    <label>Container Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>