unpackaged/main/default/objects/Opportunity/fields/Content_Management_Company__c.field-meta.xml
<CustomField>
    <fullName>Content_Management_Company__c</fullName>
    <label>Content Management Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cadmium CD</fullName>
            </value>
            <value>
                <fullName>M3 Events</fullName>
            </value>
            <value>
                <fullName>Ovation</fullName>
            </value>
            <value>
                <fullName>Webges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>