unpackaged/main/default/objects/Opportunity/fields/Contract_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pricing__c</fullName>
    <label>Contract Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC Low</fullName>
            </value>
            <value>
                <fullName>CC Medium</fullName>
            </value>
            <value>
                <fullName>CC High</fullName>
            </value>
            <value>
                <fullName>Hotel Low</fullName>
            </value>
            <value>
                <fullName>Hotel Medium</fullName>
            </value>
            <value>
                <fullName>Hotel High</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>