unpackaged/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>Contract Start Date - for AV use</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>