unpackaged/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <inlineHelpText>Type of exhibition contract (direct vs. sub); if subcontract, either Subcontract from GES or to GES</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Subcontract from GES</fullName>
            </value>
            <value>
                <fullName>Subcontract to GES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>