unpackaged/main/default/objects/Opportunity/fields/Core_A_show__c.field-meta.xml
<CustomField>
    <fullName>Core_A_show__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify who / how we need to target the show</description>
    <inlineHelpText>Used to identify who / how we need to target the show</inlineHelpText>
    <label>Core A show</label>
    <type>Checkbox</type>
</CustomField>