unpackaged/main/default/objects/Opportunity/fields/Corporate_A_C_A_show__c.field-meta.xml
<CustomField>
    <fullName>Corporate_A_C_A_show__c</fullName>
    <defaultValue>false</defaultValue>
    <description>identify who / how we need to target the show</description>
    <inlineHelpText>Used to identify who / how we need to target the show</inlineHelpText>
    <label>Corporate A/C A show</label>
    <type>Checkbox</type>
</CustomField>