unpackaged/main/default/objects/Opportunity/fields/Corporate_Event__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Event</label>
    <type>Checkbox</type>
</CustomField>